--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,123 @@
     transform: rotate(360deg);
   }
 }
+
+  
+/* 
+*******************
+Loding Spinner
+******************* 
+*/
+.loader,
+.loader:before,
+.loader:after {
+	border-radius: 50%;
+	width: 2.5em;
+	height: 2.5em;
+	-webkit-animation-fill-mode: both;
+	animation-fill-mode: both;
+	-webkit-animation: load7 1.8s infinite ease-in-out;
+	animation: load7 1.8s infinite ease-in-out;
+}
+.loader {
+	color: #7005bd;
+	font-size: 10px;
+	margin: 80px auto;
+	position: relative;
+	text-indent: -9999em;
+	-webkit-transform: translateZ(0);
+	-ms-transform: translateZ(0);
+	transform: translateZ(0);
+	-webkit-animation-delay: -0.16s;
+	animation-delay: -0.16s;
+}
+.loader:before,
+.loader:after {
+	content: '';
+	position: absolute;
+	top: 0;
+}
+.loader:before {
+	left: -3.5em;
+	-webkit-animation-delay: -0.32s;
+	animation-delay: -0.32s;
+}
+.loader:after {
+	left: 3.5em;
+}
+@-webkit-keyframes load7 {
+	0%,
+	80%,
+	100% {
+		box-shadow: 0 2.5em 0 -1.3em;
+	}
+	40% {
+		box-shadow: 0 2.5em 0 0;
+	}
+}
+@keyframes load7 {
+	0%,
+	80%,
+	100% {
+		box-shadow: 0 2.5em 0 -1.3em;
+	}
+	40% {
+		box-shadow: 0 2.5em 0 0;
+	}
+}
+
+/* 
+*******************
+General
+******************* 
+*/
+.bold {
+	font-weight: 700;
+}
+.cursive {
+	font-family: 'Pacifico', cursive;
+}
+.imgsze {
+	width: 25rem;
+}
+.formSize {
+	width: 15rem;
+}
+.margin-5 {
+	margin-top: 5%;
+}
+.margin-3 {
+	margin-top: 3%;
+}
+.margin-bottom-5 {
+	margin-bottom: 5%;
+}
+.margin-bottom-3 {
+	margin-bottom: 3%;
+}
+.progress {
+	margin-top: 0;
+}
+.margin-bottom-10 {
+	margin-bottom: 10%;
+}
+.padding-5-all {
+	padding: 5%;
+}
+.padding-y-5 {
+	padding: 5% 0;
+}
+.padding-y-5 {
+	padding: 3% 0;
+}
+
+.search {
+	background: rgb(75, 0, 130);
+	background: linear-gradient(
+		90deg,
+		rgba(75, 0, 130, 0.8827906162464986) 26%,
+		rgba(12, 0, 221, 0.8463760504201681) 100%,
+		rgba(0, 212, 255, 1) 100%
+	);
+}
+
